--- a/commands.html
+++ b/commands.html
@@ -9,7 +9,7 @@
     <title>Unix Survival Guide - Commands</title>
 </head>
 <body>
-
+<!--Setting up the sidebar-->
 <div id="sidebar">
     <img id="logo" src="./assets/images/logo.png" alt="Group logo">
     <h2>Table of Contents</h2>
@@ -24,26 +24,33 @@
 <div id="content">
     <h1>Commands</h1>
     <h2 id="homePageHeading">&nbsp;</h2>
-
+        <!--Ths function lists the contents of a directory.-->
         <p>ls: Lists the contents of a directory.<br>
         <br>user@home ~/student>$ ls
         <br>user@home ~/>$ </p>
+        <!--This function changes the current directory.-->
         <p>cd: Changes the current directory.<br><br>
         <img src="assets/images/ls-linux-command (1).webp" alt="cd example">
         </p>
-        
+        <!--This function prints the current working directory.-->
         <p>pwd: Prints the current working directory.</p>
         <img src="assets/images/pwd_example.png" alt="pwd example">
+        <!--This function creates a new directory.-->
         <p>mkdir: Creates a new directory.</p>
         <img src="assets/images/mkdir_example.png" alt="mkdir example">
+        <!--This function creates a new file or updates the timestamp of an existing file.-->
         <p>touch: Creates a new file or updates the timestamp of an existing file.</p>
         <img src="assets/images/touch_example.png" alt="touch example">
+        <!--This function deletes files/directories.-->
         <p>rm: Removes (deletes) files or directories.</p>
         <img src="assets/images/rm_example.png" alt="rm example">
+        <!--This function displays the contents of a file.-->
         <p>cat: Displays the contents of a file.</p>
         <img src="assets/images/cat_example.png" alt="cat example">
+        <!--This function searches for specific words or patterns in a file.-->
         <p>grep: Searches for specific words or patterns in a file.</p>
         <img src="assets/images/grep_example.png" alt="grep example">
+        <!--This function sends the output of a command to a file, which replaces its content.-->
         <p>>: Sends the output of a command to a file, replacing its content if it already exists.</p>
         <img src="assets/images/1_example.png" alt="> example">
         <p>>>: Appends the output of a command to the end of a file.</p>
