--- a/commands.html
+++ b/commands.html
@@ -53,16 +53,22 @@
         <!--This function sends the output of a command to a file, which replaces its content.-->
         <p>>: Sends the output of a command to a file, replacing its content if it already exists.</p>
         <img src="assets/images/1_example.png" alt="> example">
+        <!--This function appends the output of a command to the end of a file.-->
         <p>>>: Appends the output of a command to the end of a file.</p>
         <img src="assets/images/2_example.png" alt=">> example">
+        <!--This function shows the programs that are running/their IDs.-->
         <p>ps: Shows the programs that are running and their IDs.</p>
         <img src="assets/images/ps_example.png" alt="ps example">
+        <!--This function consistently updates to show which programs are using up the most resources, such as CPU or memory.-->
         <p>top: Constantly updates to show which programs are using the most resources like CPU and memory.</p>
         <img src="assets/images/top_example.png" alt="top example">
+        <!--This function stops a program-->
         <p>kill: Stops a program.</p>
         <img src="assets/images/kill_example.png" alt="kill example">
+        <!--This function tells you how long your computer's been running for.-->
         <p>uptime: Tells you how long your computer has been running since.</p>
         <img src="assets/images/uptime_example.png" alt="uptime example">
+        <!--This function checks your computer’s memory, showing how much memory is being used and how much is still available.-->
         <p>free: Checks your computer’s memory, showing how much memory is being used and how much is still available.</p>
         <img src="assets/images/free_example.png" alt="free example">
 </div>
