history responsiveness done

--- a/history.html
+++ b/history.html
@@ -28,6 +28,7 @@
         <img src="assets/images/terminal.png" alt="random_picture">
         <br>Unix's influence led to the widespread adoption of Unix variants such as BSD and System V by commercial startups. By the late 20th century, Unix had become the operating system of choice for over 90% of the world's top 500 fastest supercomputers and was widely used in modern servers, workstations, and mobile devices. Throughout the 1980s and 1990s, Unix underwent further refinement and expansion, with competing vendors contributing enhancements. The rise of open-source Unix-like operating systems, particularly Linux, in the early 21st century democratized access to Unix technology, fostering innovation and collaboration. Today, Unix and Unix-like operating systems continue to play a crucial role in computing across various domains.
         <br><img src="assets/images/terminal.png" alt="random_picture">
+        <br>Unix has had a profound impact on the evolution of computer science and software engineering, influencing the design of numerous operating systems and serving as a foundation for many modern technologies.
     </p>
 </div>
 
