--- a/practiceLessons.html
+++ b/practiceLessons.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-
+<!--Setting up the sidebar-->
 <div id="sidebar">
     <img id="logo" src="./assets/images/logo.png" alt="Group logo">
     <h2>Table of Contents</h2>
@@ -28,6 +28,7 @@
     <section class="lesson">
         <h2>Lesson 1: Introduction to UNIX</h2>
         <h3>Unix Basics</h3>
+        <!--A few points talking about the basics of UNIX-->
         <ul>
             <li>
                 <strong>File System</strong><br>
@@ -48,11 +49,13 @@
     <hr>
     <section class="lesson">
         <h2>Lesson 2: File System Navigation and Manipulation</h2>
+        <!--A few points talking about file system navigation/manipulation-->
         <p>
             UNIX employs a hierarchical structure for file organization, akin to branches of a tree. 
             Commands like cd, pwd, and ls facilitate navigation through directories, helping users find their way around.
         </p>
         <h3>Main Navigation Commands</h3>
+        <!--Some basic Unix commands-->
         <ul>
             <li>
                 <strong><strong class="code">cd</strong> (Change Directory)</strong><br>
@@ -72,6 +75,7 @@
         </ul>
         
         <h3>File Manipulation</h3>
+        <!--Some more stuff about file navigation-->
         <ul>
             <li>
                 <strong class="code">touch</strong><br>
@@ -98,6 +102,7 @@
     <hr>
     <section class="lesson">
         <h2>Lesson 3: Text Processing and Redirection</h2>
+        <!--Some points about text file manipulation-->
         <h3>Text File Manipulation</h3>
         <ul>
             <li>
@@ -111,6 +116,7 @@
             </li>
         </ul>
         <h3>Redirection</h3>
+        <!--Some points about redirecting-->
         <ul>
             <li>
                 <strong class="code">></strong><br>
@@ -125,6 +131,7 @@
     <hr>
     <section class="lesson">
         <h2>Lesson 4: Process Management and System Monitoring Content</h2>
+        <!--Here we talk about viewing processes for process management-->
         <h3>Viewing Processes</h3>
         <ul>
             <li>
@@ -136,6 +143,7 @@
                 <strong class="code">top</strong> constantly updates to show you which programs are using the most resources like CPU and memory.
             </li>
         </ul>
+        <!--Managing processes for system monitoring-->
         <h3>Managing Processes</h3>
         <ul>
             <li>
