bolded content page

--- a/commands.html
+++ b/commands.html
@@ -11,12 +11,12 @@
     <div id="sidebar">
       <img id="logo" src="assets/images/logo.png" alt="Logo">
       <h2>Table of Contents</h2>
-      <a href="index.html">Introduction</a>
-      <a href="history.html">History</a>
-      <a href="terminal.html">Terminal</a>
-      <a href="commands.html">Commands</a>
-      <a href="practiceLessons.html">Practice Lessons</a>
-      <a href="quizzes.html">Quizzes</a>
+      <a href="index.html"><strong>Introduction</strong></a>
+      <a href="history.html"><strong>History</strong></a>
+      <a href="terminal.html"><strong>Terminal</strong></a>
+      <a href="commands.html"><strong>Commands</strong></a>
+      <a href="practiceLessons.html"><strong>Practice Lessons</strong></a>
+      <a href="quizzes.html"><strong>Quizzes</strong></a>
     </div>
     <div id="content">
       <h1>Commands</h1>
