--- a/commands.html
+++ b/commands.html
@@ -48,7 +48,7 @@
         <img src="assets/images/1_example.png" alt="> example">
       </p>
       <p>>>: Appends the output of a command to the end of a file. <br>
-        <img src="assets/images/>>_example.png" alt=">> example">
+        <img src="assets/images/2_example.png" alt=">> example">
       </p>
       <p>ps: Shows the programs that are running and their IDs. <br>
         <img src="assets/images/ps_example.png" alt="ps example">
